# stormvogel

./: .gitignore  .pre-commit-config.yaml  BREAKING_CHANGES.md  Dockerfile  README.md  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: docker-nightly.yml  docs.yml  lint.yml  pypi.yml  test-core-only.yml  test-no-optionals.yml  test.yml  testwostormpy.yml
docs/: 1-landing.py  conf.py  index.rst  model.html
docs/1-Model-Construction/: 1-Building-dtmcs.py  2-Building-mdps.py  3-Building-ctmcs.py  4-Building-pomdps.py  model.html  (+2 more)
old_notebooks/: Untitled1.ipynb  Untitled2.ipynb  export.html  model.html  test.prism
scripts/: smoke.py
stormvogel/: __init__.py  _model.py  autoscale_svg.py  bird.py  communication_server.py  dfa.py  dict_editor.py  displayable.py  graph.py  gym_env.py  html_generation.py  layout.py  layout_editor.py  model.py  parametric.py  property_builder.py  rdict.py  result.py  show.py  simulator.py  to_dot.py  to_tikz.py  vis-network-9.1.9-patched.js  visualization.py
tests/: model_testing.py  notebook_integration.py  saved_test_layout.json  test_action.py  test_autoscale_svg.py  test_belief_mdp.py  test_bellman.py  test_bird.py  test_communication_server.py  test_dfa.py  test_distribution.py  test_examples.py  test_explore_pareto.py  test_fingerprint.py  test_graph.py  test_gym_sampling.py  test_html_generation.py  test_imc_to_mdp.py  test_interval.py  test_interval_model_checking.py  test_interval_roundtrip.py  test_layout.py  test_lp_solver.py  test_lp_vs_stormpy.py  test_ma.py  test_make_absorbing.py  test_make_fully_observable.py  test_make_observations_deterministic.py  test_mapping.py  test_mec.py  test_model_checking.py  test_model_creation.py  test_model_methods.py  test_multiobjective.py  test_multiobjective_policy.py  test_notebook_integration.py  test_observation.py  test_parameter_space_partitioning.py  test_parametric.py  test_parametric_analysis.py  (+18 more)
(+155 files in other folders)
