[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "stormvogel"
version = "0.12.0"
description = "Probabilistic Model Checking for almost everyone"
authors = [{name = "The stormvogel team"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.3,<9",
    "pyvis>=0.3.2,<0.4",
    "numpy>=2.0.1,<3",
    "pandas>=2.2.2,<3",
    "matplotlib>=3.9.2,<4",
    "bidict>=0.23.1,<0.24",
    "networkx>=3.4.2,<4",
    "deprecated>=1.2.18,<2",
    "sympy>=1.14.0,<2",
    "pydot>=4.0.1,<5",
]

[project.optional-dependencies]
stormpy = ["stormpy>=1.13.2,<2"]
gym     = ["gymnasium>=1.1.1,<2"]
io      = ["umbi>=0.2.10,<0.3"]
viz     = ["cairosvg>=2.8.2,<3", "pygame>=2.6.1,<3", "imageio>=2.37.0,<3", "pillow>=12.1.1,<13", "svgpathtools>=1.6.1,<2"]
solvers = ["z3-solver>=4.0,<5", "scipy>=1.13,<2"]

[dependency-groups]
test = [
    "pytest>=8.2.2,<9",
    "pytest-cov>=7.1.0,<8",
    "hypothesis>=6.151.12,<7",
]
lint = [
    "pre-commit>=3.7.1,<4",
    "ruff>=0.4.6,<0.5",
    "pyright>=1.1.408,<2",
]
doc = [
    "sphinx>=7.3.7,<8",
    "furo>=2024.5.6,<2025",
    "nbsphinx>=0.9.4,<0.10",
    "jupytext>=1.17.2,<2",
    "sphinx-autoapi>=3.3.1,<4",
    "jupyter>=1.1.1,<2",
    "ipykernel>=6.29.4,<7",
    "pyscipopt",
    # paynt missing, as it conflicts with the stormpy requirement.
]
dev = [
    "jupyterlab>=4.2.2,<5",
    "nbdime>=4.0.2,<5",
    "nox",
]

[tool.ruff]
src = ["stormvogel", "examples"]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

# pyright configuration is in pyrightconfig.json; settings here are ignored when that file exists.
[tool.pyright]
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
pythonpath = ["tests"]
